stoat/src/snapshots/tui/stoat__test_harness__review_move_cross_indent_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: normal
size: 100x20
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33mnest.rs --- 1/1 --- rust[0m                        [0m[90m│[0m                                                 [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│   1 [0m[36mfn outer() [0m[32m{}[0m                               [0m[36m│[0m
[0m[36m│[0m[90m   1 [0m[36mfn outer() {[0m                               [0m[90m│   2 [0m                                            [0m[36m│[0m
[0m[36m│[0m[90m   2 [0m[36m    let [0m[3m[36mrelocated[0m[36m = [0m[3m[36mcompute[0m[36m([0m[3m[36marg1[0m[36m, [0m[3m[36marg2[0m[36m, [0m[3m[36marg[0m[90m│.....[0m                                            [0m[36m│[0m
[0m[36m│[0m[90m   3 [0m[36m}[0m                                          [0m[90m│   3 [0m[36mfn wrapper() {[0m                              [0m[36m│[0m
[0m[36m│[0m[90m   4 [0m                                           [0m[90m│   4 [0m[36m    println!("hello");[0m                      [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│   5 [0m[36m    let [0m[3m[36mrelocated[0m[36m = [0m[3m[36mcompute[0m[36m([0m[3m[36marg1[0m[36m, [0m[3m[36marg2[0m[36m, [0m[3m[36marg3[0m[36m│[0m
[0m[36m│[0m[90m   5 [0m[36mfn wrapper() {[0m                             [0m[90m│   6 [0m[36m}[0m                                           [0m[36m│[0m
[0m[36m│[0m[90m   6 [0m[36m    println!("hello");[0m                     [0m[90m│.....[0m                                            [0m[36m│[0m
[0m[36m│[0m[90m   7 [0m[36m}[0m                                          [0m[90m│.....[0m                                            [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
