stoat/src/snapshots/tui/stoat__test_harness__review_move_straight_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: review
size: 100x20
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33mswap.rs --- 1/1 --- rust[0m                        [0m[90m│[0m                                                 [0m[36m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   1 [0m[36mfn [0m[3m[36malpha()[0m[36m {[0m                              [0m[90m│[0m[1m[36m│[0m[90m.....[0m                                           [0m[36m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   2 [0m[36m    let [0m[3m[36mx[0m[36m = [0m[3m[36m1[0m[36m;[0m                           [0m[33m┌ [0m[1m[33mr[0m[33meview ──────────────────────────────────────────┐[0m
[0m[36m│[0m[1m[36m│[0m[90m   3 [0m[36m    let [0m[3m[36my[0m[36m = [0m[3m[36m2[0m[36m;[0m                           [0m[33m│[0m[36mE[0m[1m[36ms[0m[36mc[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   4 [0m[36m    let [0m[3m[36mz[0m[36m = [0m[3m[36m3[0m[36m;[0m                           [0m[33m│[0m[36m [0m[1m[36m [0m[36mq[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   5 [0m[36m}[0m                                        [0m[33m│[0m[36m [0m[1m[36m [0m[36mn[0m[97m   advance to the next review chunk[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   6 [0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mp[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   7 [0m[36mfn beta() {[0m                              [0m[33m│[0m[36m [0m[1m[36m [0m[36mj[0m[97m   advance to the next review chunk[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   8 [0m[36m    let p = 10;[0m                          [0m[33m│[0m[36m [0m[1m[36m [0m[36mk[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   9 [0m[36m    let q = 20;[0m                          [0m[33m│[0m[36m [0m[1m[36m [0m[36ms[0m[97m   mark the current chunk as staged[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m  10 [0m[36m    let r = 30;[0m                          [0m[33m│[0m[36m [0m[1m[36m [0m[36mu[0m[97m   mark the current chunk as unstaged[0m          [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36mS[0m[1m[36mp[0m[36mc[0m[97m   togg[0m[3m[97mle stag[0m[97med/unstaged for the current chunk[0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mS[0m[97m   skip the [0m[3m[97mc[0m[97murr[0m[3m[97me[0m[97mnt chunk[0m                      [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mA[0m[97m   apply sta[0m[3m[97mg[0m[97med [0m[3m[97mc[0m[97mhunks[0m                         [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mr[0m[97m   rescan th[0m[3m[97me[0m[97m re[0m[3m[97mv[0m[97miew source[0m                    [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m  11 [0m[36m}[0m                                        [0m[33m│[0m[36m [0m[1m[36m [0m[36m:[0m[97m   open the command palette[0m                    [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[90m──────────────────────────────────────────────────[0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[97m1/1 · 0 staged · 0 unstaged · 1 pending[0m           [0m[33m│[0m
[0m[36m└───────────────────────────────────────────────[0m[33m└──────────────────────────────────────────────────┘[0m
