stoat/src/snapshots/tui/stoat__test_harness__review_multi_file.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: normal
size: 80x16
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33ma.rs --- 1/1 --- rust[0m                 [0m[90m│[0m                                       [0m[36m│[0m
[0m[36m│[0m[90m   1 [0m[36mfn [0m[31ma[0m[36m() {}[0m                        [0m[90m│   1 [0m[36mfn [0m[32ma_renamed[0m[36m() {}[0m                 [0m[36m│[0m
[0m[36m│[0m[33mb.rs --- 1/1 --- rust[0m                 [0m[90m│[0m                                       [0m[36m│[0m
[0m[36m│[0m[90m   1 [0m[36mlet x = 1;[0m                       [0m[90m│   1 [0m[36mlet x = 1;[0m                        [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                 [0m[90m│   2 [0m[36mlet [0m[32my[0m[36m = [0m[32m2[0m[36m;[0m                        [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────┘[0m
