stoat/src/snapshots/tui/stoat__test_harness__review_multi_file_navigation.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: n
focused: #1 of 1
mode: review
size: 80x20
---
[0m[36m┌───────────────────────────[0m[33m┌ review ──────────────────────────────────────────┐[0m
[0m[36m│[0m[33ma.rs --- 1/1 --- rust[0m      [0m[33m│[0m[36m  ?[0m[97m   open the help modal[0m                         [0m[33m│[0m
[0m[36m│[0m[90m    1 [0m[36mfn [0m[31ma[0m[36m() {}[0m            [0m[33m│[0m[36mEsc[0m[97m   close the active review[0m[36m() {}[0m                [0m[33m│[0m
[0m[36m│[0m[33mb.rs --- 1/1 --- rust[0m      [0m[33m│[0m[36m  q[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   1 [0m[36mlet x = 1;[0m           [0m[33m│[0m[36m  n[0m[97m   advan[0m[1m[97mc[0m[97me to the next review chunk[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                     [0m[33m│[0m[36m  p[0m[97m   step [0m[1m[97mb[0m[97mack to the previous review chunk[0m      [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  j[0m[97m   advance to the next review chunk[0m            [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  k[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  s[0m[97m   mark the current chunk as staged[0m            [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  u[0m[97m   mark the current chunk as unstaged[0m          [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36mSpc[0m[97m   toggle staged/unstaged for the current chunk[0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  S[0m[97m   skip the current chunk[0m                      [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  A[0m[97m   apply staged chunks[0m                         [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  D[0m[97m   remove staged hunks from the reviewed commit[0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  C[0m[97m   resume the paused rebase[0m                    [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  r[0m[97m   rescan the review source[0m                    [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[36m  :[0m[97m   open the command palette[0m                    [0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[90m──────────────────────────────────────────────────[0m[33m│[0m
[0m[36m│[0m                           [0m[33m│[0m[97m2/2 · 0 staged · 0 unstaged · 2 pending[0m           [0m[33m│[0m
[0m[36m└───────────────────────────[0m[33m└──────────────────────────────────────────────────┘[0m
