stoat/src/snapshots/tui/stoat__test_harness__review_session_open.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: review
size: 80x14
---
┌──────────────────────────────────────────────────────────────────────────────┐
│a.txt --- 1/2 ---                     │                                       │
││   1 a                               ││   1 A                                │
││   2 b                               ││   2 b                                │
││   3 c                               ││   3 c                                │
││   4 d                               ││   4 d                                │
│a.txt --- 2/2 ---                     │                                       │
│   17 q                               │   17 q                                │
│   18 r                               │   18 r                                │
│   19 s                               │   19 s                                │
│   20 t                               │   20 T                                │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
